<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <packaging>pom</packaging>
    <groupId>it.pagopa.selfcare.pagopa</groupId>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.5.14</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>
    <artifactId>pagopa-selfcare-ms-backoffice</artifactId>
    <version>0.4.13</version>
    <name>pagopa-selfcare-ms-backoffice</name>
    <description>Microservice to manage PagoPA Backoffice</description>

    <properties>
        <java.version>11</java.version>
        <spring-cloud.version>2020.0.4</spring-cloud.version>
        <pagopa_parent_pom.version>0.0.27</pagopa_parent_pom.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <bom_version_to_target>1.2.4</bom_version_to_target>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    </properties>


    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring-cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>com.azure</groupId>
                <artifactId>azure-sdk-bom</artifactId>
                <version>${bom_version_to_target}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>it.pagopa.selfcare.pagopa</groupId>
                <artifactId>pagopa-selfcare-connector-azure-apim</artifactId>
                <version>0.4.13</version>
            </dependency>
            <dependency>
                <groupId>it.pagopa.selfcare.pagopa</groupId>
                <artifactId>pagopa-selfcare-connector-jira-servicemanager</artifactId>
                <version>0.4.13</version>
            </dependency>
            <dependency>
                <groupId>it.pagopa.selfcare.pagopa</groupId>
                <artifactId>pagopa-selfcare-connector-aws-ses</artifactId>
                <version>0.4.13</version>
            </dependency>
            <dependency>
                <groupId>it.pagopa.selfcare.pagopa</groupId>
                <artifactId>pagopa-selfcare-connector-dao</artifactId>
                <version>0.4.13</version>
            </dependency>
            <dependency>
                <groupId>it.pagopa.selfcare.pagopa</groupId>
                <artifactId>pagopa-selfcare-ms-backoffice-connector</artifactId>
                <version>0.4.13</version>
            </dependency>
            <dependency>
                <groupId>it.pagopa.selfcare.pagopa</groupId>
                <artifactId>pagopa-selfcare-ms-backoffice-connector-api</artifactId>
                <version>0.4.13</version>
                <type>test-jar</type>
            </dependency>
            <dependency>
                <groupId>it.pagopa.selfcare.pagopa</groupId>
                <artifactId>pagopa-selfcare-ms-backoffice-core</artifactId>
                <version>0.4.13</version>
            </dependency>
            <dependency>
                <groupId>it.pagopa.selfcare.pagopa</groupId>
                <artifactId>pagopa-selfcare-ms-backoffice-web</artifactId>
                <version>0.4.13</version>
            </dependency>
            <dependency>
                <groupId>io.springfox</groupId>
                <artifactId>springfox-boot-starter</artifactId>
                <version>3.0.0</version>
            </dependency>
            <dependency>
                <groupId>ch.qos.logback.contrib</groupId>
                <artifactId>logback-json-classic</artifactId>
                <version>0.1.5</version>
            </dependency>
            <dependency>
                <groupId>ch.qos.logback.contrib</groupId>
                <artifactId>logback-jackson</artifactId>
                <version>0.1.5</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>jakarta.xml.bind</groupId>
            <artifactId>jakarta.xml.bind-api</artifactId>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.security</groupId>
            <artifactId>spring-security-core</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.security</groupId>
            <artifactId>spring-security-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.codehaus.janino</groupId>
            <artifactId>janino</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-validation</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-actuator</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-aop</artifactId>
        </dependency>
        <dependency>
            <groupId>co.elastic.logging</groupId>
            <artifactId>logback-ecs-encoder</artifactId>
            <version>1.5.0</version>
        </dependency>
    </dependencies>
    <modules>
        <module>core</module>
        <module>web</module>
        <module>app</module>
        <module>connector-api</module>
        <module>connector</module>
    </modules>

    <build>
        <plugins>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.8.8</version>
                <executions>
                    <execution>
                        <id>prepare-agent</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>

                    <execution>
                        <id>report</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>

                    <execution>
                        <id>report-aggregate</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>report-aggregate</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.sonarsource.scanner.maven</groupId>
                <artifactId>sonar-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <phase>verify</phase>
                        <goals>
                            <goal>sonar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <testResources>
            <testResource>
                <directory>src/test/resources</directory>
                <filtering>true</filtering>
            </testResource>
        </testResources>
    </build>

</project>
